--- a/my_res/public/index.html
+++ b/my_res/public/index.html
@@ -51,6 +51,15 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" /> -->
 
+    <!-- Google Map Autocomplete -->
+    <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCLmkMvRT42aeaFqentZfmn09iJtDLa7es&libraries=places"></script> -->
+
+    <!-- Zalo chat  -->
+    <!-- <script src="https://sp.zalo.me/plugins/sdk.js"></script> -->
+
+    <!-- Zalo Pay  -->
+    <!-- <script src="/js/zalopay.js?ver=1494921725335" type="text/javascript"></script> -->
+
     <!-- Title  -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
