--- a/my_res/public/index.html
+++ b/my_res/public/index.html
@@ -61,7 +61,8 @@
     <!-- <script src="/js/zalopay.js?ver=1494921725335" type="text/javascript"></script> -->
 
     <!-- Title  -->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Nhà hàng Món Việt</title>
   </head>
   <body>
     <noscript>
