--- a/my_res/public/index.html
+++ b/my_res/public/index.html
@@ -8,7 +8,7 @@
     <!-- Fav icon -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
-    <!-- <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
@@ -49,16 +49,19 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" /> -->
+    <meta name="theme-color" content="#ffffff" />
 
     <!-- Google Map Autocomplete -->
     <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCLmkMvRT42aeaFqentZfmn09iJtDLa7es&libraries=places"></script> -->
 
     <!-- Zalo chat  -->
-    <!-- <script src="https://sp.zalo.me/plugins/sdk.js"></script> -->
+    <script src="https://sp.zalo.me/plugins/sdk.js"></script>
 
     <!-- Zalo Pay  -->
-    <!-- <script src="/js/zalopay.js?ver=1494921725335" type="text/javascript"></script> -->
+    <script
+      src="/js/zalopay.js?ver=1494921725335"
+      type="text/javascript"
+    ></script>
 
     <!-- Title  -->
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
